Take down site for dev

--- a/index_main.html
+++ b/index_main.html
@@ -88,9 +88,14 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Hello, I'm Utkarsh!</div>
-                <img src="img/utkarsh.jpg" style="margin-bottom:20px;" class="img-circle" alt="Utkarsh Simha" height="150" width="130">
-                <div class="intro-heading">Welcome to my portfolio</div>
+                <div class="text" style="margin-left:100px; margin-right:100px; margin-bottom:50px; font-size:20px;">
+                    I'm currently interning at Citrix R&amp;D and would be pursuing Master's in Computer Science and Engineering specializing
+                    in Machine Learning and Artificial Intelligence, at the University of California, San Diego from Fall 2016.
+                </div>
+                <img src="img/utkarsh.jpg" style="margin-bottom:20px;" class="img-circle" alt="Utkarsh Simha" height="180px" width="190px">
+                <!-- <div class="intro-heading">Welcome to my portfolio</div> -->
                 <!-- <a href="#work" class="page-scroll btn btn-xl">Tell Me More</a> -->
+                <br/>
                 <a href="#work" class="page-scroll"><i class="fa fa-angle-double-down" style="font-size:80px; color:#ffcc00;"></i></i></a>
             </div>
         </div>
@@ -131,7 +136,7 @@
                         <img src="img/logos/citrix.jpg" alt="Citrix" height="80px" width="120px" style="margin-left:-20px;"/>
                     </span>
                     <h4 class="service-heading">Software Engineering Intern</h4>
-                    <p class="text-muted">Interning at Citrix R&amp;D India.</p>
+                    <p class="text-muted">Interning at Citrix R&amp;D India as part of the ShareConnect team.</p>
                 </div>
             </div>
         </div>
@@ -284,9 +289,9 @@
           <div class="item active col-sm-12">
             <h2 class="text-center" style="margin-bottom:30px;"> About Me </h2>
             <div class="col-sm-6">
-              <p class="text-center" style="font-family:'Kaushan Script', Arial, sans-serif; font-size:30px; margin-bottom:16px;"> Hi! I'm Utkarsh Simha </h4>
+              <p class="text-center" style="font-family:'Arial', Arial, sans-serif; font-size:30px; margin-bottom:16px;"> Hi! I'm Utkarsh Simha </h4>
               <br/>
-              <p class="text-left mytext" style="margin-left:10%; font-family: 'Dancing Script', cursive, Arial, sans-serif; font-size: 25px; font-weight: 400;" >
+              <p class="text-left mytext" style="margin-left:10%; font-family: 'Times', cursive, Arial, sans-serif; font-size: 25px; font-weight: 400;" >
                 I'm an under-grad student at PES Institute of Technology pursuing my Bachelor's of Engineering in Computer Science.
                 I am very passionate about Computer Science, especially Deep Learning, Artificial Intelligence and Applied Machine Learning.
                 I plan to pursue a Masters in Computer Science in the aforementioned specializations and probably a PhD in the future!
