New version. No fancy stuff.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,131 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Personal website of Utkarsh Simha">
+        <meta name="author" content="Utkarsh Simha">
+        <meta name="keywords" content="utkarsh simha,student,ucsd,pesit,cmu,website,graduate,grad student" />
+
         <title> Utkarsh Simha's homepage </title>
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/custom.css">
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/custom.js"></script>
+
     </head>
+
     <body>
-        <h1> This site is under construction.. </h1>
+
+        <div class="row">
+            <div class="col-sm-6 pad-top">
+                <h2> Utkarsh Simha </h2>
+                <p>
+                    <a href="http://cse.ucsd.edu" target="_blank"> Department of Computer Science and Engineering
+                    </a> <br/>
+                    <a href="http://ucsd.edu" target="_blank"> University of California, San Diego
+                    </a> <br/>
+                    <strong> usimha (at) ucsd (dot) edu </strong>
+                </p>
+            </div>
+            <div class="col-sm-6">
+                <img class="right" src="img/utkarsh.jpg" alt="Utkarsh Simha" height="180px" width="170px"></img>
+            </div>
+        </div>
+
+        <br/>
+        <span class="divider"></span>
+
+        <div id="overview">
+            <h3> Overview </h3>
+            <p>
+                I am a grad student at UC San Diego pursuing my Master's in Computer Science and Engineering specializing
+                in Machine Learning and Artificial Intelligence <br/>
+                I received my Bachelor's in Computer Science and Engineering from
+                <a href="http://pes.edu" target="_blank"> PES Institute of Technology, Bangalore. </a> You can find further
+                details in my <a href="files/utkarshsimha_resume.pdf">resume</a>
+            </p>
+        </div>
+
+        <div>
+            <h3> Research/Work Experience </h3>
+            <ul style="list-style-type: square;">
+                <li>
+                    <h4> Carnegie Mellon University, Pittsburgh:</h4>
+                    <p>
+                        Interned at the
+                        <a href="http://lti.cs.cmu.edu" target="_blank"> Language Technologies Institute
+                        </a> in the School of Computer Science at Carnegie Mellon
+                        University during the summer of 2015. Worked on implementing Deep Learning methods for speech recognition
+                        in CMU Sphinx.
+                    </p>
+                </li>
+                <li>
+                    <h4> Citrix R&amp;D, Bangalore: </h4>
+                    <p>
+                        Interned at Citrix R&amp;D, Bangalore as part of the
+                        <a href="http://shareconnect.com/" target="_blank   "> ShareConnect
+                        </a> team during Jan - July 2016. Worked on
+                        implementing end-to-end screen sharing.
+                    </p>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <h3> Publications </h3>
+            <ul style="list-style-type: square;">
+                <li>
+                    <h4>
+                        Standards based Integration of Advanced Key Management Capabilities with Openstack
+                        <small>
+                            <a target="_blank" href="http://ieeexplore.ieee.org/document/7436938/">
+                                (ieeexplore)
+                            </a>
+                        </small>
+                    </h4>
+                    <p>
+                        D. Sitaram, S. Harwalkar, S. Iyer, S. Jha, U. Simha <br/>
+                        <i>IEEE CCEM 2015, Bangalore </i>
+                    </p>
+                </li>
+        </div>
+
+        <div>
+            <h3> Research Interests </h3>
+            <p>
+                I am broadly interested in Machine Learning, specifically Neural Networks and Deep Learning techniques.
+                I am also interested in the application of these techniques to Natural Language Processing.
+                <br/><br/>
+                I worked on Deep Learning during my internship at Carnegie Mellon University, where I implemented Deep
+                Neural Networks and trained them on a speech database, to replace the
+                <abbr title="Gaussian Mixture Model-Hidden Markov Model">GMM-HMM</abbr> models in CMU Sphinx with
+                <abbr title="Deep Neural Network-Hidden Markov Model">DNN-HMM</abbr> models.
+            </p>
+        </div>
+
+        <div>
+            <h3> Hobbies </h3>
+            <p>
+                I play the piano, guitar and sometimes the flute. I post some of my piano recordings on my
+                <a href="https://soundcloud.com/utkarsh-hiker" target="_blank"> soundcloud channel </a> and my
+                <a href="https://www.youtube.com/c/utkarshsimha" target="_blank"> YouTube channel </a>
+                <br/><br/>
+                I am also an ardent trekker. I have trekked to Everest Base Camp, Dzongri and Manmahesh in the Himalayas, and many
+                smaller treks in and around Karnataka.
+            </p>
+        </div>
+
+        <span class="divider"></span>
+        <br/><br/>
+
+        <footer>
+            &copy; Utkarsh Simha 2016
+            <br/>
+            <i>Last updated: 25th Aug, 2016</i>
+        </footer>
+
     </body>
 </html>
