Add outer div class container

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
     <body>
-
+        <div class="container">
         <div class="row">
             <div class="col-sm-6 pad-top">
                 <h2> Utkarsh Simha </h2>
@@ -91,6 +91,7 @@
                         <i>IEEE CCEM 2015, Bangalore </i>
                     </p>
                 </li>
+            </ul>
         </div>
 
         <div>
@@ -126,6 +127,6 @@
             <br/>
             <i>Last updated: 25th Aug, 2016</i>
         </footer>
-
+    </div>
     </body>
 </html>
