remove float: right for image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="container">
         <div class="row">
-            <div class="col-sm-6 pad-top">
+            <div class="col-sm-8 pad-top">
                 <h2> Utkarsh Simha </h2>
                 <p>
                     <a href="http://cse.ucsd.edu" target="_blank"> Department of Computer Science and Engineering
@@ -30,8 +30,8 @@
                     <strong> usimha (at) ucsd (dot) edu </strong>
                 </p>
             </div>
-            <div class="col-sm-6">
-                <img class="right" src="img/utkarsh.jpg" alt="Utkarsh Simha" height="180px" width="170px"></img>
+            <div class="col-sm-4">
+                <img src="img/utkarsh.jpg" alt="Utkarsh Simha" height="180px" width="170px"></img>
             </div>
         </div>
 
