Updated last updated and fixed typo

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <p>
                             Interning at the
                             <a href="https://www.research.ibm.com/cognitive-computing/index.shtml" target="_blank"> Cognitive Computing department
-                            </a> at TJ Watson Research Center during summer 2017
+                            </a> at TJ Watson Research Center during summer 2017.
                             Built a data collection pipeline to collect meta-information about machine learning models from an automated data science 
                             service. Performing meta-learning on the collected data to find the best subset of machine laerning models to ensemble
                         </p>
@@ -178,7 +178,7 @@
             <footer>
                 &copy; Utkarsh Simha 2016
                 <br/>
-                <i>Last updated: 25th Aug, 2016</i>
+                <i>Last updated: 12th July, 2017</i>
             </footer>
         <!-- </div> -->
     </body>
